# -soundboi-tracks

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  bandcamp-auth.md  spotify.md
src/soundboi_tracks/: __init__.py  cli.py  config.py  tui.py  tui_widgets.py
src/soundboi_tracks/audio/: __init__.py  player.py
src/soundboi_tracks/providers/: __init__.py  preview.py  search.py
src/soundboi_tracks/providers/bandcamp/: __init__.py  auth.py  collection.py  download.py  search.py
src/soundboi_tracks/providers/beatport/: __init__.py  search.py
src/soundboi_tracks/providers/spotify/: __init__.py  auth.py  client.py  models.py
