[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soundboi-tracks"
version = "0.1.0"
description = "Local track search and acquisition helper."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12",
  "curl-cffi>=0.7",
  "playwright>=1.44",
  "textual>=0.79",
]

[project.optional-dependencies]
orpheus = [
  "defusedxml>=0.7.1",
  "ffmpeg-python>=0.2.0",
  "m3u8>=2.0.0",
  "mutagen>=1.45.1",
  "Pillow>=8.2.0",
  "protobuf==3.15.8",
  "pycryptodomex>=3.10.1",
  "requests>=2.25.1",
  "tqdm>=4.60.0",
]
dev = [
  "pytest>=8",
  "ruff>=0.5",
]

[project.scripts]
soundboi-tracks = "soundboi_tracks.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
